--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -6,7 +6,14 @@
 <p>Phone Number: <%= @restaurant.phone_number %></p>
 
 <h3>Reviews</h3>
-<%= link_to 'Leave a review', new_restaurant_review_path(@restaurant) %>
+<p>Leave a review</p>
+<% @review = Review.new %>
+<%= simple_form_for [ @restaurant, @review ] do |f| %>
+  <%= f.input :rating, collection: 0..5 %>
+  <%= f.input :content %>
+  <%= f.submit "Submit review", class: "btn btn-primary" %>
+<% end %>
+
 <ul>
   <% @restaurant.reviews.each do |review| %>
     <li>
